# game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  setup.py
editor/src/: editor.cpp
engine/include/: engine.hpp
engine/src/: engine.cpp  engine.h
engine/src/renderer/: vk_renderer.cpp  vk_renderer.h
engine/src/utils/: Log.cpp  Log.h
